<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="PKc-jj-Loh">
                                <rect key="frame" x="30" y="209" width="354" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="textField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="2iN-7a-ybI"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5HP-8Q-SSb">
                                <rect key="frame" x="126.5" y="269" width="161" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="button"/>
                                <state key="normal" title="TextField -&gt; NSNumber"/>
                                <connections>
                                    <action selector="buttonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nnE-tC-E8X"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mSp-pR-UCE">
                                <rect key="frame" x="30" y="329" width="354" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="label"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="5HP-8Q-SSb" firstAttribute="top" secondItem="PKc-jj-Loh" secondAttribute="bottom" constant="30" id="DJe-Gs-t31"/>
                            <constraint firstItem="mSp-pR-UCE" firstAttribute="top" secondItem="5HP-8Q-SSb" secondAttribute="bottom" constant="30" id="E8q-Yb-5Ju"/>
                            <constraint firstItem="PKc-jj-Loh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="KG4-Ob-N0l"/>
                            <constraint firstItem="PKc-jj-Loh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" multiplier="0.5" id="Nj1-MY-aiX"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PKc-jj-Loh" secondAttribute="trailing" constant="30" id="PpT-S1-ILk"/>
                            <constraint firstItem="PKc-jj-Loh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UHm-6X-yYg"/>
                            <constraint firstItem="mSp-pR-UCE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="jQu-Ti-Yhs"/>
                            <constraint firstItem="5HP-8Q-SSb" firstAttribute="centerX" secondItem="PKc-jj-Loh" secondAttribute="centerX" id="jwD-xT-oCG"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mSp-pR-UCE" secondAttribute="trailing" constant="30" id="xJ2-z2-yWo"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="numberLabel" destination="mSp-pR-UCE" id="BGV-Ga-FYA"/>
                        <outlet property="textField" destination="PKc-jj-Loh" id="bcJ-lp-gXh"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
        </scene>
    </scenes>
</document>
